@@ -4,10 +4,10 @@
  /************************************************************************************/		
  function purecss_customizer( $wp_customize ) {
  	$wp_customize->add_section('purecss_sidebar', array(
- 		'title' => 'Theme Settings',
+ 		'title' => __('Theme Settings', 'simply-pure'),
  		'priority'=> 110
  		));
- 		/* Header Background */
+ 		/* Sidebar Positioning */
     $wp_customize->add_setting( 'sidebar_position' , array(
     	'default'     => 'left',
     	'transport'   => 'refresh',
@@ -16,13 +16,13 @@
 	) );
 
     $wp_customize->add_control( new WP_Customize_Control( $wp_customize, 'purecss_sidebar_position_select', array(
-	'label'        => __( 'Sidebar Position', 'purecss' ),
+	'label'        => __( 'Sidebar Position', 'simply-pure' ),
 	'section'    => 'purecss_sidebar',
 	'settings'   => 'sidebar_position',
 	'type' => 'radio',
 	'choices' => array(
-		'left'=>__('Left'),
-	    'right'=>__('Right')
+		'left'=>__('Left', 'simply-pure'),
+	    'right'=>__('Right', 'simply-pure')
 	    ),
 	 ) ) );
     $wp_customize->add_setting('header_position', array(
@@ -32,15 +32,15 @@
         'sanitize_callback'=>'sanitize_theme_values'
     	));
     $wp_customize->add_control( new WP_Customize_Control( $wp_customize, 'purecss_header_position', array(
-    	'label' => 'Header Position',
+    	'label' => __('Header Position','simply-pure'),
     	'section' =>'purecss_sidebar',
     	'settings' =>'header_position',
     	'type' => 'select',
     	'choices' => array(
-    		'sidebar-top' => 'Sidebar Top',
-    		'content-top' => 'Content Top',
-    		'both' => 'Display on Both',
-    		'content-top-home' => 'Sidebar Top + (Content Top on Home Page)'
+    		'sidebar-top' => __('Sidebar Top', 'simply-pure'),
+    		'content-top' => __('Content Top', 'simply-pure'),
+    		'both' => __('Display on Both', 'simply-pure'),
+    		'content-top-home' => __('Sidebar Top + (Content Top on Home Page)', 'simply-pure')
     		)
     	)));
     
@@ -53,7 +53,7 @@
     
     $wp_customize->add_control( 'display_avatar_control', array(
         'settings' => 'display_avatar',
-        'label'    => __( 'Display Avatar next to Post title', 'purecss'),
+        'label'    => __( 'Display Avatar next to Post title', 'simply-pure'),
         'section'  => 'purecss_sidebar',
         'type'     => 'checkbox',
         ) );
