@@ -1,4 +1,4 @@
 <div class="navigation">
-<div class="alignleft"><?php previous_posts_link('&laquo; '.__('Previous Entries','purecss'),'') ?></div>
-<div class="alignright"><?php next_posts_link(__('Next Entries','purecss').' &raquo;','') ?></div>
+<div class="alignleft"><?php previous_posts_link('&laquo; '.__('Previous Entries','simply-pure'),'') ?></div>
+<div class="alignright"><?php next_posts_link(__('Next Entries','simply-pure').' &raquo;','') ?></div>
 </div>
