@@ -1,4 +1,4 @@
 <form class="pure-form searchform" action="/" method="get">
-    <input type="search" name="s" class="searchbox" placeholder="Search...">
+    <input type="search" name="s" class="searchbox" placeholder="<?php _e('Search...', 'simply-pure')?>">
     <button type="submit" class="searchbutton">Go</button>
 </form>
