@@ -9,6 +9,7 @@
 3. Add first version of a fr_FR.po (by Sebseb01)
 4. Update to purecss 0.6 (grids.css is needed by a bug) (by Sebseb01)
 5. Small bugfixes
+6. Changed Text domain from 'purecss' to 'simply-pure'
 
 
 /*
